<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_new"

    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_search_black_24dp"/>

    <EditText
        android:id="@+id/job_description_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@android:color/transparent"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:textColorHint="#fff"
        android:maxLines="1"
        android:layout_marginTop="30dp"
        android:hint="@string/edit_text_job_descripition_hint" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f9d7db" />

    <EditText
        android:id="@+id/job_location_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:ems="10"
        android:drawablePadding="12dp"
        android:padding="8dp"

        android:textColorHint="#fff"
        android:maxLines="1"
        android:background="@android:color/transparent"
        android:layout_marginTop="4dp"
        android:hint="@string/edit_text_job_location_hint" />

    <CheckBox
        android:id="@+id/checkbox_full_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#fff"
        android:onClick="onCheckboxClicked"
        android:padding="8dp"
        android:text="@string/full_time" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back"
        android:textColor="#f16f7d"
        android:textAllCaps="false"
        android:padding="16dp"
        android:clickable="true"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:id="@+id/search_jobs"
        android:text="@string/search_jobs_button_name"/>
    </LinearLayout>


</ScrollView>