<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".JobDetails"
    android:background="@drawable/background_login_two">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="#b2497d"
            android:maxLines="1"
            android:text="@string/details_position_title" />

        <TextView
            android:id="@+id/position_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Android Developer"
            android:textColor="#000"
            android:layout_weight="1"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="#b2497d"
            android:text="@string/details_location" />

        <TextView
            android:id="@+id/position_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="Android Developer"
            android:textColor="#000"
            android:ellipsize="end"
            android:textSize="16sp"
             />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="#b2497d"
            android:text="@string/details_positions_company" />

        <TextView
            android:id="@+id/position_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="2"
            android:text="Android Developer"
            android:ellipsize="end"
            android:textColor="#000"
            android:textSize="16sp" />

    </LinearLayout>


    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textColor="#b2497d"
        android:text="@string/details_position_description" />

    <TextView
        android:id="@+id/position_description"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold" />

</LinearLayout>


</ScrollView>
